@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-19T00:24:09Z",
-  "count_outdated" : 272,
-  "uniques_outdated" : 52,
+  "timestamp" : "2022-04-19T16:06:42Z",
+  "count_outdated" : 276,
+  "uniques_outdated" : 53,
   "count" : 287,
   "uniques" : 57,
   "views" : [
-    {
-      "timestamp": "2022-04-05T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 6,
