@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 4,
+  "count": 11,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-04-05T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 6,
